# ohalo-playbooks

./: .gitignore  AGENTS.md  LICENSE  README.md  pytest.ini
atlan-dxr-integration/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
atlan-dxr-integration/app/: __init__.py  activities.py  atlan_service.py  client.py  handler.py  workflow.py
atlan-dxr-integration/app/frontend/: workflow.json
atlan-dxr-integration/atlan-dxr-integration/tests/: test_custom_metadata.py
atlan-dxr-integration/atlan_dxr_integration/: __init__.py  __main__.py  atlan_service.py  atlan_types.py  atlan_uploader.py  config.py  connection_manager.py  connection_utils.py  custom_metadata.py  dataset_builder.py  datasource_ingestor.py  dxr_client.py  file_asset_builder.py  global_attributes.py  metadata_migration.py  pipeline.py  sanity_check.py  tag_registry.py
atlan-dxr-integration/frontend/static/: app.js  index.html  styles.css
atlan-dxr-integration/frontend/templates/: index.html
atlan-dxr-integration/scripts/: debug_file_tags.py  purge_orphan_assets.py  sanity_check.py
atlan-dxr-integration/tests/: conftest.py  test_atlan_service.py  test_atlan_uploader.py  test_connection_manager.py  test_connection_provisioner.py  test_connection_provisioner_live.py  test_dataset_builder.py  test_dxr_client.py  test_file_asset_builder.py  test_metadata_migration.py  test_pipeline_integration.py  test_sanity_check.py  test_tag_registry.py
box-shield-endpoint/: .env.example  Dockerfile  README.md  box_shield_dxr_integration.py  docker-compose.yml  requirements.txt  run_once.sh  sanity-check.sh
box-shield-endpoint/boxlib/: __init__.py  box_client.py  config.py  dxr.py  mapping.py  (+1 more)
box-shield-integration/: README.md  config.example.yml  dxr_box_shield_connector.py  requirements.txt
databricks-unity-dxr-integration/: .env.example  README.md  metadata_schema.csv  pyproject.toml  requirements-dev.txt  requirements.txt
databricks-unity-dxr-integration/scripts/: run_pipeline.py
databricks-unity-dxr-integration/src/databricks_unity_dxr_integration/: __init__.py  checkpoint.py  config.py  databricks_client.py  dxr_client.py  job.py  metadata.py  metadata_records.py  metadata_store.py  pipeline.py  volume.py
databricks-unity-dxr-integration/tests/: test_checkpoint.py  test_config.py  test_databricks_client.py  test_dxr_client.py  test_job.py  test_metadata.py  test_metadata_records.py  test_metadata_store.py  test_pipeline.py  test_volume.py
dxr-cloudformation-deployment/: README.md  dxr-single-server-cloudformation-amazonlinux.yaml  dxr-single-server-cloudformation.yaml  inventory-example-dxr-single-server.json  package-and-deploy-dxr.sh
dxr-metadata-athena-pipeline/: README.md
export-stream-endpoint/: README.md  dummy_web_server.py  requirements.txt
file-records-management-in-databricks/: README.md  pyproject.toml
file-records-management-in-databricks/databricks/jobs/: daily_file_metadata.json
file-records-management-in-databricks/scripts/: remediate_duplicates.ps1  run_daily_snapshot.py
file-records-management-in-databricks/src/query_data_xray/: __init__.py  config.py  dxr_client.py  job.py
file-retention-using-databricks/: .env.example  README.md  requirements-dev.txt  requirements.txt
glue-unstructured-dq-monitoring/: README.md  create-lambda-package.sh  main.tf  outputs.tf  terraform.example.tfvars
purview-stream-endpoint/: .env.example  Dockerfile  README.md  docker-compose.yml  purview_dxr_integration.py  purview_dxr_integration_test.py  requirements.txt  run_once.sh  sanity-check.sh
query-data-xray-data-in-databricks/: .env.example  README.md
rag-app/: .gitignore  README.md  config.yml  plan.md  start.sh
rag-app/backend/: .env.example  README.md  docker-compose.yml  ingest_documents.py  init_database.py  pyproject.toml  rag_service.py  requirements.txt  start.sh
rag-app/backend/api/: __init__.py  app.py  main.py  middleware.py
rag-app/backend/auth/: __init__.py  mock_idp.py
rag-app/backend/core/: __init__.py  config.py  logging.py  utils.py
rag-app/backend/database/: __init__.py  create_user.sql  init.py  manager.py  schema.sql
rag-app/backend/database/init/: schema.sql
rag-app/backend/database/policies/: hr.sql
rag-app/backend/ingestion/: __init__.py  cli.py  config.py  database.py  processor.py
s3-etl-quarantine/: .gitignore  Pulumi.yaml  README.md  build_lambda.sh  pyproject.toml
s3-security/: .env.example  .gitignore  Pulumi.dev.yaml  Pulumi.dxr-odc-aws.yaml  Pulumi.yaml  README.md  __main__.py  build_lambda.py  event.json  lambda_function.py  lambda_test_event.json  pyproject.toml  requirements.txt  start_demo.sh
scan-email-attachments/: .env.example  .gitignore  Dockerfile  README.md  THUNDERBIRD_SETUP.md  docker-compose.yml  pyproject.toml  pytest.ini  start_playbook.sh
scan-email-attachments/src/smtp_proxy/: __init__.py  blocked_labels.yaml  config.py  email_processor.py  server.py  smtp_server.py
scan-email-attachments/tests/: __init__.py  conftest.py  test_email_processor.py  test_integration.py  test_smtp_server.py
terraform-glue-dq-integration/: README.md  main.tf  outputs.tf  variables.tf
(+56 files in other folders)
