[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "query-data-xray-data-in-databricks"
version = "0.1.0"
description = "Databricks job that snapshots Data X-Ray file metadata into Delta Lake"
readme = "README.md"
authors = [{ name = "Ohalo" }]
license = { text = "Proprietary" }
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0,<3",
    "pyspark>=3.5.0,<4",
    "python-dotenv>=1.0.0,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4,<8",
    "build>=1.2.1",
    "pyproject-hooks>=1.0.0",
    "packaging>=23.0",
]

[project.scripts]
"dxr-file-metadata-job" = "query_data_xray.job:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
